Worked on fetching data

--- a/client/angular/my-angular-app/src/app/financial-event-table/financial-event-table.component.html
+++ b/client/angular/my-angular-app/src/app/financial-event-table/financial-event-table.component.html
@@ -8,6 +8,7 @@
       <td>Date</td>
     </tr>
   </thead>
+  <!-- This tbody ngFor needs to be changed. -->
   <tbody *ngFor="let financialEvent of financialEvents">
     <tr>
       <td>{{ financialEvent.amount }}</td>
@@ -18,3 +19,4 @@
     </tr>
   </tbody>
 </table>
+
