--- a/client/angular/my-angular-app/src/app/app.component.html
+++ b/client/angular/my-angular-app/src/app/app.component.html
@@ -363,7 +363,7 @@
        My work is being displayed here. -->
   <router-outlet></router-outlet>
 
-  Highlight Card
+  <!-- Highlight Card
   <div class="card highlight-card card-small">
     <svg
       id="rocket"
@@ -424,7 +424,7 @@
         fill="#f5f5f5"
       />
     </svg>
-  </div>
+  </div> -->
 
   <!-- Resources -->
   <h2>Resources</h2>
