Single detail component with GET by Id

--- a/client/angular/my-angular-app/src/app/app.component.html
+++ b/client/angular/my-angular-app/src/app/app.component.html
@@ -6,8 +6,11 @@
   >
   |
   <!-- Statement refers to all financial events listed -->
-  <a class="button" routerLink="/statement" routerLinkActive="activebutton"
-    >Statement</a
+  <a
+    class="button"
+    routerLink="/financial-events"
+    routerLinkActive="activebutton"
+    >Financial-events</a
   >
   |
   <a class="button" routerLink="/sign-in" routerLinkActive="activebutton"
