--- a/client/angular/my-angular-app/src/app/financial-events/financial-events.component.html
+++ b/client/angular/my-angular-app/src/app/financial-events/financial-events.component.html
@@ -1,4 +1,4 @@
-<h2>Statement</h2>
+<h2>Financial Events</h2>
 <table>
   <tr>
     <th>Id</th>
@@ -7,7 +7,10 @@
     <th>Description</th>
   </tr>
   <!-- For each item in array, create new DOM object with data of item. -->
-  <tr *ngFor="let financialEvent of financialEvents">
+  <tr
+    *ngFor="let financialEvent of financialEvents"
+    routerLink="/events/{{ financialEvent.id }}"
+  >
     <td>{{ financialEvent.id }}</td>
     <td>{{ financialEvent.type }}</td>
     <td>{{ financialEvent.amount }}</td>
