--- a/client/angular/my-angular-app/src/app/financial-event-details/financial-event-details.component.html
+++ b/client/angular/my-angular-app/src/app/financial-event-details/financial-event-details.component.html
@@ -6,33 +6,13 @@
   <p>Type: {{ financialEvent?.type }}</p>
   <p>Amount: {{ financialEvent?.amount }}</p>
   <p>Description: {{ financialEvent?.description }}</p>
-  <button (click)="edit()">Edit</button>
 </div>
 
 <!-- Edit mode -->
-<div *ngIf="editEnabled">
-  <label for="new-financial-event">Amount: </label>
-  <input id="new-financial-event" type="number" #financialEventAmount />
-
-  <label for="new-financial-event">Type: </label>
-  <select id="new-financial-event" #financialEventType>
-    <option value="House">Housing</option>
-    <option value="Transportation">Transportation</option>
-    <option value="Food">Food</option>
-    <option value="Utilities">Utilities</option>
-    <option value="Insurance">Insurance</option>
-    <option value="Healthcare">Healthcare</option>
-    <option value="Saving, Investing, & Debt Payments">
-      Saving, Investing & Debt Payments
-    </option>
-    <option value="Personal">Personal</option>
-    <option value="Entertainment">Entertainment</option>
-    <option value="Miscellaneous">Miscellaneous</option>
-  </select>
-
-  <label for="new-financial-event">Description: </label>
-  <input id="new-financial-event" #financialEventDescription />
-
-  <!-- (click) passes input values to add()-->
-  <button type="button" class="add-button">Add Financial Event</button>
-</div>
+<!-- [financialEvent] is a property passed down to the child component app-financial-event-form -->
+<app-financial-event-form
+  *ngIf="editEnabled"
+  [financialEvent]="financialEvent"
+  [isNewFinancialEvent]="false"
+></app-financial-event-form>
+<button (click)="edit()">Edit</button>
