--- a/client/angular/my-angular-app/src/app/financial-event-form/financial-event-form.component.html
+++ b/client/angular/my-angular-app/src/app/financial-event-form/financial-event-form.component.html
@@ -1,1 +1,53 @@
-<p>financial-event-form works!</p>
+<div *ngIf="!isNewFinancialEvent">
+  <label for="new-financial-event">Amount: </label>
+  <input
+    id="new-financial-event"
+    type="number"
+    #financialEventAmount
+    value="{{ financialEvent?.amount }}"
+  />
+
+  <label for="new-financial-event">Type: </label>
+  <select
+    id="new-financial-event"
+    #financialEventType
+    [value]="financialEvent?.type"
+  >
+    <option value="House">Housing</option>
+    <option value="Transportation">Transportation</option>
+    <option value="Food">Food</option>
+    <option value="Utilities">Utilities</option>
+    <option value="Insurance">Insurance</option>
+    <option value="Healthcare">Healthcare</option>
+    <option value="Saving, Investing, & Debt Payments">
+      Saving, Investing & Debt Payments
+    </option>
+    <option value="Personal">Personal</option>
+    <option value="Entertainment">Entertainment</option>
+    <option value="Miscellaneous">Miscellaneous</option>
+  </select>
+
+  <label for="new-financial-event">Description: </label>
+  <input
+    id="new-financial-event"
+    #financialEventDescription
+    value="{{ financialEvent?.description }}"
+  />
+
+  <!-- (click) passes input values to save()-->
+  <button
+    type="button"
+    class="save-button"
+    (click)="
+      save(
+        financialEventAmount.valueAsNumber,
+        financialEventType.value,
+        financialEventDescription.value
+      )
+    "
+  >
+    save
+  </button>
+
+  <button type="button" class="delete-button" (click)="delete()">delete</button>
+</div>
