Sign in route, added form component to dashboard

--- a/client/angular/my-angular-app/src/app/dashboard/dashboard.component.html
+++ b/client/angular/my-angular-app/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,4 @@
-<p>dashboard works!</p>
+<!-- If isNewFinancialEvent, then display form for POST. Else form for PUT/DELETE -->
+<app-financial-event-form
+  [isNewFinancialEvent]="true"
+></app-financial-event-form>
