--- a/client/angular/my-angular-app/src/app/app.component.html
+++ b/client/angular/my-angular-app/src/app/app.component.html
@@ -5,7 +5,6 @@
     >Dashboard</a
   >
   |
-  <!-- Statement refers to all financial events listed -->
   <a
     class="button"
     routerLink="/financial-events"
@@ -16,6 +15,8 @@
   <a class="button" routerLink="/sign-in" routerLinkActive="activebutton"
     >Sign-in</a
   >
+  |
+  <a class="button" (click)="logout()">Logout</a>
 </nav>
 
 <!-- router-outlet is the component that actually displays other components. The links above tell Angular which address the app should go to. -->
