--- a/client/angular/my-angular-app/src/app/app.component.html
+++ b/client/angular/my-angular-app/src/app/app.component.html
@@ -16,7 +16,7 @@
     >Sign-in</a
   >
   |
-  <!-- <a class="button" (click)="logout()">Logout</a> -->
+  <a class="button" (click)="logout()">Logout</a>
 </nav>
 
 <!-- router-outlet is the component that actually displays other components. The links above tell Angular which address the app should go to. -->
