--- a/client/angular/my-angular-app/src/app/dashboard/dashboard.component.html
+++ b/client/angular/my-angular-app/src/app/dashboard/dashboard.component.html
@@ -2,3 +2,4 @@
 <app-financial-event-form
   [isNewFinancialEvent]="true"
 ></app-financial-event-form>
+<app-financial-events></app-financial-events>
