--- a/client/angular/my-angular-app/src/app/dashboard/dashboard.component.html
+++ b/client/angular/my-angular-app/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,33 @@
+<!-- Sub-nav -->
+<div class="container flex flex-col items-center">
+  <!-- Search -->
+  <input
+    type="text"
+    placeholder="search"
+    class="bg-gray-800 focus:outline-none focus:ring focus:outline-gray-500 rounded-md w-full h-10 mt-4"
+  />
+  <div class="bg-gray-800 rounded-md w-full h-10 mt-4 flex">
+    <!-- TODO: Change style on select -->
+    <div
+      class="bg-yellow-600 rounded-md h-full w-1/2 text-black text-center self-center"
+    >
+      <a routerLink="/financial-events" routerLinkActive="activebutton"
+        >History</a
+      >
+    </div>
+    <div class="h-full w-1/2 text-gray-400 text-center self-center">
+      <a href="#">Graph</a>
+    </div>
+  </div>
+</div>
+
+<!-- Summary -->
+<app-summary></app-summary>
+
 <!-- If isNewFinancialEvent, then display form for POST. Else form for PUT/DELETE -->
 <app-financial-event-form
   [isNewFinancialEvent]="true"
 ></app-financial-event-form>
+
+<!-- Financial event history -->
 <app-financial-events></app-financial-events>
