Adding a lot of styling
- nav icons
- search bar
- centering throughout
- new transaction list styling
- some gradient background

--- a/client/angular/my-angular-app/src/app/financial-event-form/financial-event-form.component.html
+++ b/client/angular/my-angular-app/src/app/financial-event-form/financial-event-form.component.html
@@ -1,4 +1,5 @@
 <div *ngIf="!isNewFinancialEvent">
+  <h2>Update Financial Event</h2>
   <label for="new-financial-event">Amount: </label>
   <input
     id="new-financial-event"
