--- a/client/angular/my-angular-app/src/app/summary/summary.component.html
+++ b/client/angular/my-angular-app/src/app/summary/summary.component.html
@@ -1,1 +1,8 @@
-<div class="container bg-green-900 rounded-md h-60 w-full"></div>
+<div
+  class="container bg-gradient-to-r from-green-900 to-green-700 rounded-2xl h-52 mt-6"
+>
+  <h2>$458.42</h2>
+  <a routerLink="/add" class="border-dotted border rounded-full"
+    ><i class="fa-solid fa-plus"></i
+  ></a>
+</div>
