--- a/client/angular/my-angular-app/src/app/dashboard/dashboard.component.html
+++ b/client/angular/my-angular-app/src/app/dashboard/dashboard.component.html
@@ -1,33 +1,41 @@
-<!-- Sub-nav -->
-<div class="container flex flex-col items-center">
-  <!-- Search -->
+<!-- Search -->
+<div
+  class="bg-gray-800 rounded-md w-full h-10 mt-4 flex items-center justify-start"
+>
+  <i
+    class="fa-solid fa-magnifying-glass text-zinc-400 basis-8 flex items-center justify-center"
+  ></i>
   <input
     type="text"
     placeholder="search"
-    class="bg-gray-800 focus:outline-none focus:ring focus:outline-gray-500 rounded-md w-full h-10 mt-4"
+    class="basis-full h-full bg-gray-800 hover:ring-0 focus:outline-none focus:ring focus:outline-gray-500"
   />
-  <div class="bg-gray-800 rounded-md w-full h-10 mt-4 flex">
-    <!-- TODO: Change style on select -->
-    <div
-      class="bg-yellow-600 rounded-md h-full w-1/2 text-black text-center self-center"
+</div>
+
+<!-- Sub nav -->
+<div
+  class="bg-gray-800 rounded-md w-full h-10 mt-4 flex items-center justify-center"
+>
+  <!-- TODO: Change style on select -->
+  <div
+    class="bg-gradient-to-r from-yellow-600 to-yellow-500 rounded-md h-full basis-1/2 text-black flex items-center justify-center"
+  >
+    <a routerLink="/financial-events" routerLinkActive="activebutton"
+      >History</a
     >
-      <a routerLink="/financial-events" routerLinkActive="activebutton"
-        >History</a
-      >
-    </div>
-    <div class="h-full w-1/2 text-gray-400 text-center self-center">
-      <a href="#">Graph</a>
-    </div>
+  </div>
+  <div class="h-full basis-1/2 text-gray-400 flex items-center justify-center">
+    <a href="#">Graph</a>
   </div>
 </div>
 
 <!-- Summary -->
 <app-summary></app-summary>
 
-<!-- If isNewFinancialEvent, then display form for POST. Else form for PUT/DELETE -->
+<!-- If isNewFinancialEvent, then display form for POST. Else form for PUT/DELETE
 <app-financial-event-form
   [isNewFinancialEvent]="true"
-></app-financial-event-form>
+></app-financial-event-form> -->
 
 <!-- Financial event history -->
 <app-financial-events></app-financial-events>
