Reactive Form and form styling
Created reactive form alternate for adding transactions.

--- a/client/angular/my-angular-app/src/app/dashboard/dashboard.component.html
+++ b/client/angular/my-angular-app/src/app/dashboard/dashboard.component.html
@@ -7,7 +7,7 @@
   ></i>
   <input
     type="text"
-    placeholder="search"
+    placeholder="Search"
     class="basis-full h-full bg-gray-800 hover:ring-0 focus:outline-none focus:ring focus:outline-gray-500"
   />
 </div>
