minor tweak to amount input in form

--- a/client/angular/my-angular-app/src/app/financial-event-form/financial-event-form.component.html
+++ b/client/angular/my-angular-app/src/app/financial-event-form/financial-event-form.component.html
@@ -110,7 +110,7 @@
       type="text"
       formControlName="amount"
       required
-      class="bg-transparent"
+      class="bg-transparent w-1/2"
     />
   </div>
 
