--- a/client/angular/my-angular-app/src/app/summary/summary.component.html
+++ b/client/angular/my-angular-app/src/app/summary/summary.component.html
@@ -1,11 +1,11 @@
 <div
-  class="container bg-gradient-to-r from-green-900 to-green-800 rounded-2xl min-h-fit mt-6"
+  class="container bg-gradient-to-r from-green-900 to-green-800 rounded-2xl min-h-fit h-2/3 mt-6"
 >
   <h2>Summary</h2>
-  <!-- <a routerLink="/add" class="border-dotted border rounded-full"
+  <a routerLink="/add" class="border-dotted border rounded-full"
     ><i class="fa-solid fa-plus"></i
-  ></a> -->
-  <app-financial-event-form
+  ></a>
+  <!-- <app-financial-event-form
     [isNewFinancialEvent]="true"
-  ></app-financial-event-form>
+  ></app-financial-event-form> -->
 </div>
