Added pie chart
- Gets data
- parses data into categories

--- a/client/angular/my-angular-app/src/app/summary/summary.component.html
+++ b/client/angular/my-angular-app/src/app/summary/summary.component.html
@@ -5,6 +5,8 @@
   <a routerLink="/add" class="border-dotted border rounded-full"
     ><i class="fa-solid fa-plus"></i
   ></a>
+<app-chart></app-chart>
+
   <!-- <app-financial-event-form
     [isNewFinancialEvent]="true"
   ></app-financial-event-form> -->
