--- a/client/angular/my-angular-app/src/app/summary/summary.component.html
+++ b/client/angular/my-angular-app/src/app/summary/summary.component.html
@@ -1,11 +1,36 @@
 <div
-  class="container bg-gradient-to-r from-green-900 to-green-800 rounded-2xl min-h-fit h-2/3 mt-6"
+  class="container bg-gradient-to-r from-green-900 to-green-800 rounded-2xl mt-6 flex flex-col h-56"
 >
-  <h2>Summary</h2>
-  <a routerLink="/add" class="border-dotted border rounded-full"
-    ><i class="fa-solid fa-plus"></i
-  ></a>
-<app-chart></app-chart>
+  <h1 class="text-xl text-gray-200 basis-1/3 flex items-center">Summary</h1>
+  <!-- Budget and daily total -->
+  <div class="flex w-full basis-1/3">
+    <div class="basis-1/2">
+      <h2 class="text-gray-400">Budget</h2>
+      <p class="text-gray-300">$1,400/mo</p>
+    </div>
+    <div class="basis-1/2">
+      <h2 class="text-gray-400">Today's Total</h2>
+      <p class="text-gray-300">$45.87</p>
+    </div>
+  </div>
+
+  <!-- Circle buttons -->
+  <div class="flex flex-nowrap w-full basis-1/3">
+    <a routerLink="/add" class="summary-btn-container"
+      ><i class="fa-solid fa-plus summary-btn border-dotted bg-green-700"></i
+    ></a>
+    <a routerLink="/add" class="summary-btn-container"
+      ><i class="fa-solid fa-plus summary-btn"></i
+    ></a>
+    <a routerLink="/add" class="summary-btn-container"
+      ><i class="fa-solid fa-plus summary-btn"></i
+    ></a>
+    <a routerLink="/add" class="summary-btn-container"
+      ><i class="fa-solid fa-plus summary-btn"></i
+    ></a>
+  </div>
+
+  <!-- <app-chart></app-chart> -->
 
   <!-- <app-financial-event-form
     [isNewFinancialEvent]="true"
