Search, financial event icons

--- a/client/angular/my-angular-app/src/app/chart/chart.component.html
+++ b/client/angular/my-angular-app/src/app/chart/chart.component.html
@@ -1,8 +1,10 @@
-<canvas baseChart
+<canvas
+  baseChart
   [type]="'pie'"
   [datasets]="pieChartDatasets"
   [labels]="pieChartLabels"
   [options]="pieChartOptions"
   [plugins]="pieChartPlugins"
-  [legend]="pieChartLegend">
+  [legend]="pieChartLegend"
+>
 </canvas>
