--- a/client/angular/my-angular-app/src/app/financial-event-form/financial-event-form.component.html
+++ b/client/angular/my-angular-app/src/app/financial-event-form/financial-event-form.component.html
@@ -1,3 +1,7 @@
+<div
+  class="bg-gradient-to-r from-green-900 to-green-800 absolute w-full h-2/5 -z-10 top-0 left-0"
+></div>
+
 <!-- EDIT existing financial event  -->
 <!-- The update part of this form is template driven and not recommended by Google for anything other than simple forms.  -->
 <div *ngIf="!isNewFinancialEvent">
