--- a/client/angular/my-angular-app/src/app/summary/summary.component.html
+++ b/client/angular/my-angular-app/src/app/summary/summary.component.html
@@ -19,18 +19,18 @@
     <a routerLink="/add" class="summary-btn-container"
       ><i class="fa-solid fa-plus summary-btn border-dotted bg-green-700"></i
     ></a>
-    <a routerLink="/add" class="summary-btn-container"
-      ><i class="fa-solid fa-plus summary-btn"></i
+    <a routerLink="/add" class="summary-btn-container">
+      <i class="fa-regular fa-paper-plane summary-btn text-black bg-white"></i
     ></a>
-    <a routerLink="/add" class="summary-btn-container"
-      ><i class="fa-solid fa-plus summary-btn"></i
-    ></a>
-    <a routerLink="/add" class="summary-btn-container"
-      ><i class="fa-solid fa-plus summary-btn"></i
+    <a routerLink="/add" class="summary-btn-container border-yellow-500">
+      <i
+        class="fa-solid fa-inbox summary-btn bg-yellow-500 border-yellow-500 text-black"
+      ></i>
+    </a>
+    <a routerLink="/add" class="summary-btn-container">
+      <i class="fa-solid fa-ellipsis summary-btn"></i
     ></a>
   </div>
-
-  <!-- <app-chart></app-chart> -->
 
   <!-- <app-financial-event-form
     [isNewFinancialEvent]="true"
