--- a/client/angular/my-angular-app/src/app/dashboard/dashboard.component.html
+++ b/client/angular/my-angular-app/src/app/dashboard/dashboard.component.html
@@ -1,16 +1,5 @@
 <!-- Search -->
-<div
-  class="bg-gray-800 rounded-md w-full h-10 mt-4 flex items-center justify-start"
->
-  <i
-    class="fa-solid fa-magnifying-glass text-zinc-400 basis-8 flex items-center justify-center"
-  ></i>
-  <input
-    type="text"
-    placeholder="Search"
-    class="basis-full h-full bg-gray-800 hover:ring-0 focus:outline-none focus:ring focus:outline-gray-500"
-  />
-</div>
+<app-search></app-search>
 
 <!-- Sub nav -->
 <div
